# shiaaa

./: .env  .env.example  .gitignore  MODAL_TRANSCRIPTION_GUIDE.md  README.md  config.yaml  cors.json  db_backend.py  main.py  modal_app.py  modal_run.py  print_db.py  pyproject.toml  requirements.txt  styles.css  test_transcription.py
modal_app/: run.py
modal_app/app/: stage_data.py  transcription.py
scripts/: fill_db.py  generate_segments.py  preprocess_audio.py
src/fast_audio_annotate/: __init__.py  config.py  metadata.py  modal_transcription.py  segments.py  transcription.py
